--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>ev</title>
 <!--    <link rel = "stylesheet" type= "text/css" href = "lantern/lantern.css" media = "screen" />-->
+    <link rel="icon" href="image/ico1.ico" type="image/x-icon">
+
     <style>
         body{
             /*background: linear-gradient(100deg,#ffb6c1 , #9795f0);渐变背景色*/
@@ -176,7 +178,7 @@
         <a href="https://www.xiezuocat.com/#/">秘塔写作猫</a>
     </div>
     <div class="sites_container">
-        <a href="https://tool.liumingye.cn/music/?page=searchPage#/">音乐下载</a>
+        <a href="https://tool.liumingye.cn/music/#/">音乐下载</a>
     </div>
     <br>
     <div class="sites_container">
@@ -223,6 +225,10 @@
 
     <div class="sites_container">
         <button id="chuansongmen" style="width: 130px;">传送门</button>
+    </div><br>
+
+    <div class="sites_container">
+        <a href="https://chat.forefront.ai/" >Forefront Chat</a>
     </div>
     <!-- <div class="sites_container">
         <a href="" ></a>
