修改回车效果

--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
         var key;
         key = event.keyCode;
         if(key==13){
-            window.location.href=get_wd_search();
+            // window.location.href=get_wd_search();
+            window.open(get_wd_search());
         }
     }
     function get_wd_search(){//设置输入框转向目的地址
