--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </div>
     
     <div class="sites_container">
-        <a href="https://chat.openai.com/chat/fcdf73d1-33e5-459a-9088-adcd3f7d7d4c?__cf_chl_rt_tk=pvscYkG7Qxkx1W5gpopMPduhhp6dmlXimPhguvkwyKk-1679992642-0-gaNycGzNGjs" >ChatGpt</a>
+        <a href="https://chat.openai.com/" >ChatGpt</a>
     </div>
 
     <div class="sites_container">
