--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <input type="button" value="哔哩哔哩(+2)" onclick="jump_bilibili()" style="background-color: coral; font-size: 20px;border-radius: 13px"/><br>
     <input type="button" value="英汉互译(+space)" onclick="jump_fanyi_en_ch()" style="font-size: 20px;border-radius: 13px"/>
     <input type="button" value="知乎(+3)" onclick="jump_fanyi_en_ch()" style="font-size: 20px;border-radius: 13px"/>
+    <button onclick="jump_myTranslate()" style="font-size: 20px;border-radius: 13px">我的翻译</button>
    <hr>
 
     <!-- <img class="xin" src="image/pink.png" width="50" height="37" onclick="control_music(this)" title="播放/暂停背景音乐"/>
@@ -241,7 +242,10 @@
         <a href="https://www.helloimg.com/xiaozhupeiqi551">hello图床</a>
     </div>
     <div class="sites_container">
-        <a href="https://www.latexlive.com/">在线LaTeX</a>
+        <a href="https://www.latexlive.com/">LaTeX公式编辑器</a>
+    </div>
+    <div class="sites_container">
+        <a href="https://www.aliyundrive.com/drive/file/backup/62763f4ad6e7b66caa894ec2a0e981c3a0304128">我的网盘音乐</a>
     </div>
     <!-- <div class="sites_container">
         <a href="" ></a>
@@ -251,7 +255,6 @@
     </div> -->
 
 </center>
-
 
 
 </body>
@@ -295,6 +298,9 @@
             return "https://cn.bing.com/search?q="+wd_init;
     }
     
+    function jump_myTranslate(){
+        window.location.href = "myTranslate.html";
+    }
 
     // function control_music(i){
     //     var audio = document.getElementById('music');
@@ -319,7 +325,7 @@
     }
 
     chuansongmen.addEventListener("click", ()=>{
-        window.location.href = "http://8.130.15.145/control/tousermainpage";
+        window.location.href = "http://182.92.208.248/control/tousermainpage";
     });
 </script>
 
