--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
         <a href="https://www.aliyundrive.com/drive/file/backup/62763f4ad6e7b66caa894ec2a0e981c3a0304128">我的网盘音乐</a>
     </div>
     <!-- <div class="sites_container">
+        <a href="https://app.suno.ai/create/">AI音乐生成</a>
+    </div> -->
+    <!-- <div class="sites_container">
         <a href="" ></a>
     </div>
     <div class="sites_container">
