--- a/myTranslate.html
+++ b/myTranslate.html
@@ -37,7 +37,9 @@
             50% { background-color: yellow; }
             100% { background-color: white; }
         }
-
+        button:hover{
+            background-color: orangered;
+        }
     </style>
 </head>
 <body>
@@ -46,8 +48,10 @@
             <h2>中英互译</h2>
         </div>
         <div class="container">
+            <button @click="clearAndPaste(0)" style="font-size: 18px;border-radius: 8px; margin-right: 2px;">清空并粘贴</button>
             <button @click="func_EnToCh" style="margin-right: 100px;font-size: 18px;border-radius: 8px;">翻译</button>
-            <button @click="func_ChToEn" style="font-size: 18px;border-radius: 8px;">翻译</button>
+            <button @click="func_ChToEn" style="font-size: 18px;border-radius: 8px; margin-right: 2px;">翻译</button>
+            <button @click="clearAndPaste(1)" style="font-size: 18px;border-radius: 8px;">清空并粘贴</button>
         </div>
         <div class="container">
             <textarea v-model="content_english" placeholder="英文区域" autofocus="true" @keyup.enter="func_EnToCh" rows="15" class="area_raw" :style="{animation:animating_left ? 'flash 0.5s infinite':'none', backgroundColor:bgColor}"></textarea>
@@ -138,6 +142,7 @@
                             var temp = data.trans_result[0].dst;
                             this.content_chinese = temp;
                             this.startAnimation(1);
+                            // this.upload_trans_info(this.content_english, this.content_chinese);
                         } 
                     });
                 },
@@ -165,6 +170,26 @@
                         } 
                     });
                 },
+                upload_trans_info(source, dest){
+                    var formData = new FormData();
+                    formData.append("source", source);
+                    // formData.append("dest", dest);
+                    console.log("123开始上传");
+                    //http://127.0.0.1:8000/storetrans 这里设置为向本地服务器上传时显示调用错误。。。不懂
+                    fetch("http://182.92.208.248/strp",{
+                        method:'post',
+                        body:formData,
+                    })
+                    .then(response=>{
+                        if(!response.ok){
+                            throw new Error('lkz error');
+                        }
+                        console.log("上传成功");
+                    })
+                    .catch(error=>{
+                        console.error(error);
+                    })
+                },
                 func_copyEnglish(){
                     var temparea = document.createElement('textarea');
                     temparea.value = this.content_english;
@@ -182,6 +207,32 @@
                     document.execCommand('copy');
                     document.body.removeChild(temparea);
                     console.log('已复制');
+                },
+                clearAndPaste(slt){
+                    //参数slt选择清空0左边或1右边
+                    if (slt===0){
+                        if(navigator.clipboard){
+                            navigator.clipboard.readText().then(clipText=>{
+                                this.content_english = "";
+                                this.content_english = clipText;
+                            }).catch(err=>{
+                                console.error("无法读取剪切板内容", err);
+                            });
+                        }else{
+                            console.log("浏览器不支持剪切板clipboard API");
+                        }
+                    }else{
+                        if(navigator.clipboard){
+                            navigator.clipboard.readText().then(clipText=>{
+                                this.content_chinese = "";
+                                this.content_chinese = clipText;
+                            }).catch(err=>{
+                                console.error("无法读取剪切板内容", err);
+                            });
+                        }else{
+                            console.log("浏览器不支持剪切板clipboard API");
+                        }
+                    }
                 },
                 startAnimation(slt){
                     if(slt==0){
@@ -201,6 +252,10 @@
                         }, 1500);
                     }
                 },
+            },
+            created(){
+                // console.log("直接运行上传 ");
+                // this.upload_trans_info("你好", "hello");
             }
         })
     </script>
