翻译页面添加访问服务器获取fortune

--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
             return "https://so.csdn.net/so/search?spm=1000.2115.3001.7499&q="+wd;
         else if(search_index=='2')//哔哩哔哩
             return "https://search.bilibili.com/all?keyword="+wd;
-        else if (search_index==' ')//英译汉
-            return "https://fanyi.baidu.com/?aldtype=16047#en/zh/"+wd;
+        // else if (search_index==' ')//英译汉
+        //     return "https://fanyi.baidu.com/?aldtype=16047#en/zh/"+wd;
         else if (search_index=='3')//知乎
             return "https://www.zhihu.com/search?type=content&q="+wd;
         else
