添加背景图片

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <style>
         body{
             /*background: linear-gradient(100deg,#ffb6c1 , #9795f0);渐变背景色*/
-            background-color: navajowhite;
+            /* background-color: navajowhite; */
+            background-image: url("https://vip.helloimg.com/i/2024/04/07/6612617a73ab0.jpg");
+            background-size: cover;
         }
         .fl{
             width:20%;
@@ -177,9 +179,12 @@
         <a href="https://yiyan.baidu.com/?from=baidu_pc_index">文心一言</a>
     </div>
     <div class="sites_container">
-        <a href="https://www.panewslab.com/zh/index.html">Web3社区</a>
+        <a href="https://kimi.moonshot.cn/">Kimi_AI</a>
     </div>
     <br>
+    <div class="sites_container">
+        <a href="https://www.panewslab.com/zh/index.html">Web3社区</a>
+    </div>
     <div class="sites_container">
         <a href="https://www.latexlive.com/">LaTeX公式编辑器</a>
     </div>
@@ -246,7 +251,7 @@
     </div>
     <br>
     <div class="sites_container">
-        <a href="https://www.helloimg.com/xiaozhupeiqi551">hello图床</a>
+        <a href="https://www.helloimg.com/user/images">hello图床</a>
     </div>
 
 <!-- 乱七八糟学习网站11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111 -->
