--- a/myTranslate.html
+++ b/myTranslate.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="utils/vue.js"></script>
     <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="./md5.js"></script>
+    <script src="utils/md5.js"></script>
     <title>Document</title>
     <style>
         .area_raw{
@@ -283,7 +283,12 @@
                 //     console.error('fail...')
                 // });
                 //获取公共平台的
-                fetch("https://v1.hitokoto.cn/")
+                fetch("https://v1.hitokoto.cn/",{
+                    method:'get',
+                    headers: {
+                    'Content-Type': 'application/json',
+                    },
+                })
                 .then(response=>{
                     return response.json();
                 })
