--- a/index.html
+++ b/index.html
@@ -283,7 +283,11 @@
         {
             'name':'腾讯文档',
             'url':'https://docs.qq.com/desktop/mydoc'
-        }
+        },
+        {
+            'name':'抖音',
+            'url':'https://www.douyin.com/'
+        },
     ];
     const site_array3 = [
         {
