--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
         {
             'name':'processOn画图',
             'url':'https://www.processon.com/diagrams'
+        },
+        {
+            'name':'谷歌学术镜像',
+            'url':'http://xs.3822808.com/'
         }
     ];
     const site_array2 = [
