modify GPT site

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         },
         {
             'name':'ChatGpt',
-            'url':'https://chat.openai.com/'
+            'url':'https://chatgpt.com/'
         },
         {
             'name':'Forefront Chat',
