添加赛博掷圣杯页面

--- a/index.html
+++ b/index.html
@@ -412,6 +412,10 @@
         {
             'name':'传送门',
             'url':'http://xiaozhupeiqi.gay/'
+        },
+        {
+            'name':'赛博掷圣杯',
+            'url':'quantum-decision.html'
         }
     ];
     renderButtons(site_array1, numPerLine);
