删除茭杯页面

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         },
         {
             'name':'赛博掷圣杯',
-            'url':'quantum-decision.html'
+            'url':'http://lzh.zzdx.gay:55156/'
         }
     ];
     renderButtons(site_array1, numPerLine);
