补足了三次预测失败时的页面消失

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             'url':'http://xiaozhupeiqi.gay/'
         },
         {
-            'name':'赛博掷圣杯',
+            'name':'赛博掷茭杯',
             'url':'quantum-decision.html'
         }
     ];
