myTranslate:粘贴后自动翻译

--- a/index.html
+++ b/index.html
@@ -416,6 +416,9 @@
         {
             'name':'赛博掷茭杯',
             'url':'quantum-decision.html'
+        },{
+            'name':'通义AI画图',
+            'url':'https://tongyi.aliyun.com/wanxiang/creation'
         }
     ];
     renderButtons(site_array1, numPerLine);
